[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
numpy = "^1.22.2"
Flask = "^2.2.0"
urllib3 = "1.26.15"
poetry = "1.1.13"
httpx = "0.24.1"
youtube-search = "2.1.2"
youtube-search-python = "1.6.6"
bs4 = "^0.0.1"
translate = "^3.6.1"
Pillow = "^10.0.0"
discord = "^2.3.1"
giphy_client = "^1.0.0"
aiohttp = "^3.8.5"
openai = "^0.27.8"
requests = "2.31.0"
feedparser = "^6.0.10"
discord-together = "1.2.6"
insightface = "0.7.3"
timedelta = "2020.12.3"
google = "3.0.0"
google-search = "^1.1.1"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"